@@ -4,6 +4,7 @@ amaroK ChangeLog
 
 
 VERSION 1.1:
+  ADD: Tagless tracks now go into Collection too, listed as "unknown".
   ADD: Automatic album cover fetching is back and improved.
   ADD: Option for automatically switching to Context when playback is started.
   CHG: Stream timeout value is now determined from KDE user settings.
